@@ -2,7 +2,8 @@ Revision history for pyModbusTCP
 
 0.x.x Next release
 
-    - encode_ieee and decode_ieee, now support double-precision format with opt double.
+    - word_list_to_long() and long_list_to_word(), now support 64 bits long long with opt long_long.
+    - encode_ieee() and decode_ieee(), now support double-precision format with opt double.
     - add shortcut alias for functions with long names in utils.
     - rewrite of some functions in utils.
     - improve test_utils readability.
